--- a/wbs-web-client/pom.xml
+++ b/wbs-web-client/pom.xml
@@ -114,6 +114,7 @@
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
+        <version>${jetty.version}</version>
       </plugin>
     </plugins>
   </build>
